--- a/user/themes/imaginarious/scss/template-customized/_core.scss
+++ b/user/themes/imaginarious/scss/template-customized/_core.scss
@@ -45,7 +45,7 @@ a {
 
 	#body .modular-row {
 		clear: both;
-		overflow: auto;
+		overflow: visible;
 		// margin-bottom: 2rem;
 		margin-bottom: 4rem;
 
